--- a/server/views/layouts/main.ejs
+++ b/server/views/layouts/main.ejs
@@ -33,6 +33,7 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="/css/main.css" />
+    <script src="https://kit.fontawesome.com/4af35a45f3.js" crossorigin="anonymous"></script>
     <% const extra = typeof extraStyles !== 'undefined' ? (Array.isArray(extraStyles) ? extraStyles : [extraStyles]) : []; %>
     <% extra.forEach((href) => { %>
       <link rel="stylesheet" href="<%= href %>" />
