--- a/server/views/partials/topbar.ejs
+++ b/server/views/partials/topbar.ejs
@@ -3,9 +3,9 @@
     ☰
   </button>
   <div class="d-flex align-items-center gap-2">
-    <div class="pill-brand"></div>
+    <div class=""><i class="fa-regular fa-futbol fa-bounce fs-5 premium-color"></i></div>
     <a href="/" class="text-decoration-none d-flex flex-column py-2">
-      <div class="fw-bold text-uppercase text-inverse">Mikeka ya Uhakika</div>
+      <div class="fw-bold text-uppercase text-inverse">MIKEKA<span class="premium-color">YA</span>UHAKIKA</div>
       <small class="text-muted">Tabiri bora za betting Tanzania</small>
     </a>
   </div>
