--- a/server/views/layouts/main.ejs
+++ b/server/views/layouts/main.ejs
@@ -34,6 +34,7 @@
     />
     <link rel="stylesheet" href="/css/main.css" />
     <script src="https://kit.fontawesome.com/4af35a45f3.js" crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/htmx.org@1.9.12"></script>
     <% const extra = typeof extraStyles !== 'undefined' ? (Array.isArray(extraStyles) ? extraStyles : [extraStyles]) : []; %>
     <% extra.forEach((href) => { %>
       <link rel="stylesheet" href="<%= href %>" />
@@ -54,11 +55,13 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script src="/js/sidebar.js"></script>
+    <script src="/js/auth-forms.js"></script>
     <script>
       window.OpenAff = function (slug) {
         const url = `https://bet-link.top/${slug}/register`;
         window.open(url, '_blank');
       };
     </script>
+    <%- include('../partials/toasts') %>
   </body>
 </html>
